data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4172.wast
;; 1. **Test Description**: Create a test where `call_indirect` is used inside a loop with a `br_if` condition that depends on the result of the `call_indirect`. The loop should exit when a specific condition is met, but due to improper operand handling, the condition is never satisfied, resulting in an infinite loop.    - **Constraint Being Checked**: Proper handling of operand stack and correct evaluation of the `br_if` condition.    - **Relation to Infinite Loops**: Incorrect stack operation can lead to `br_if` never evaluating to true, causing an infinite loop.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (func $callee (param i32) (result i32)
      (i32.add (local.get 0) (i32.const 1))
    )
    (table 1 funcref)
    (elem (i32.const 0) $callee)
    (func $test
      (loop $loop
        (i32.const 0)  ;; operand for call_indirect
        (call_indirect (type $sig) (i32.const 0))
        (br_if $loop (i32.ne (local.get 0) (i32.const 5)))
      )
    )
  )
  "type mismatch"
)